fix for rank alignment in Safari on taxon page taxonomy tab #4119

--- a/app/assets/stylesheets/shared/taxonomic_branch.scss
+++ b/app/assets/stylesheets/shared/taxonomic_branch.scss
@@ -91,6 +91,9 @@
       a:hover {
         color: #23527c;
       }
+      .rank {
+        vertical-align: bottom;
+      }
     }
     li.current > .row-content .SplitTaxon,
     li.current > .row-content .SplitTaxon a {
